--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.1",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
