--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
     "build": "cd android && gradlew assembleDebug && cd ../"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@ui-kitten/components": "^5.3.1",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-crypto": "^2.2.0",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
