--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-image-picker": "^5.6.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0"
   },
