--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.4.0",
     "react": "18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-native": "0.71.8",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-image-picker": "^5.6.0",
+    "react-native-image-size": "^1.1.6",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
     "react-native-select-dropdown": "^3.4.0",
